Fix for custom logo sizing if it's too large

--- a/css/flowplayer.css
+++ b/css/flowplayer.css
@@ -1073,7 +1073,7 @@
 .flowplayer video.fp-engine { visibility:visible; }
 .flowplayer .fp-engine { max-width:100%; }
 .flowplayer.is-fullscreen .fp-logo{z-index:2147483647;}
-.flowplayer .fp-logo {max-width:33%;-webkit-tap-highlight-color: rgba(0,0,0,0);}
+.flowplayer .fp-logo {max-width:25%;-webkit-tap-highlight-color: rgba(0,0,0,0);}
 .flowplayer .fp-logo img {box-shadow:none}
 .flowplayer.fixed-controls .fp-logo {bottom: 15px}
 
@@ -1604,7 +1604,6 @@ article .entry-content .fvfp_admin_error p { line-height: 18px }
   	.flowplayer .fp-captions{line-height:14px !important}
   	.flowplayer .fp-captions p{font-size:14px !important;line-height:20px !important}
 	.flowplayer .fp-help p{font-size:9px;}
-	.flowplayer .fp-logo{max-width: 130px;}
   	.fv_fp_close a {width:24px;height:24px;background-size:24px 24px}
   	.fp-playlist-vertical-wrapper .fp-playlist-vertical {padding:0}
   	.fp-playlist-horizontal a h4, .fp-playlist-external a h4 {font-size:12px}
@@ -1621,7 +1620,6 @@ article .entry-content .fvfp_admin_error p { line-height: 18px }
 	.fp-playlist-external a h4 {font-size:10px}  
 }
 @media only screen and (max-width: 22.44em) {
-	.flowplayer .fp-logo{max-width: 90px;}
 	.flowplayer.is-fv-narrow .mailchimp-form{padding:10px 1.5%}
 	.flowplayer.is-fv-narrow .fv_player_popup{font-size:.7em}	
 	.fp-playlist-vertical-wrapper.is-fv-narrow .fp-playlist-vertical a {width:100%;float:none;margin:.75% .5%}
